--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -9,10 +9,14 @@
   margin-top: 0; }
   .richcc-popup-container.bottom {
     margin-top: 0; }
+    .richcc-popup-container.bottom.yearly-only {
+      margin-top: 10px; }
     .richcc-popup-container.bottom > .arrow::after {
       border-bottom-color: #0073c6; }
   .richcc-popup-container.top {
     margin-top: 0; }
+    .richcc-popup-container.top.yearly-only {
+      margin-top: -15px; }
     .richcc-popup-container.top > .arrow::after {
       border-top-color: #0073c6; }
   .richcc-popup-container.bottom {
@@ -128,9 +132,63 @@
   height: 100%;
   padding: 0 15px;
   background: #fff;
-  margin: 0; }
+  margin: 0;
+  border: none;
+  position: relative; }
+  .richcc-datepicker.fixedWidth {
+    width: 1367px;
+    height: 595px;
+    display: block;
+    margin: 0 auto;
+    padding: 5px 0 0 0; }
+  .richcc-datepicker .richcc-spinner-holder {
+    position: absolute;
+    padding-top: calc(0.25 * (100% - 140px));
+    padding-left: calc(0.50 * (100% - 150px));
+    width: 100%;
+    z-index: 999; }
+  .richcc-datepicker .spinner-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    opacity: 0.75;
+    z-index: 900; }
   .richcc-datepicker[light=true] {
     padding: 0 8px; }
+  .richcc-datepicker .spinner {
+    width: 70px;
+    text-align: center; }
+  .richcc-datepicker .spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: #0073c6;
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both; }
+  .richcc-datepicker .spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s; }
+  .richcc-datepicker .spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s; }
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1); } }
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1); } }
   .richcc-datepicker .richcc-icon-container {
     outline: none;
     border: 0;
@@ -188,26 +246,25 @@
     width: 100%; }
   .richcc-datepicker .richcc-daypicker {
     height: 100%; }
+    .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-year-top-head {
+      width: 100%; }
+    .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr.h40 {
+      height: 40px; }
     .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr th {
       width: 16%; }
       .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr th.w48 {
-        width: 4%; }
-      .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr th.richcc-td-space0, .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr th.richcc-td-space1, .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr th.richcc-td-space2, .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr th.richcc-td-space3, .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr th.richcc-td-space4 {
-        width: 17.68%; }
-      .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr th.richcc-td-space5 {
-        width: 7.74%; }
-        .richcc-datepicker .richcc-daypicker.uib-monthpicker thead tr th.richcc-td-space5 .richcc-month-eventbox {
-          width: 33%; }
+        width: 48px; }
+    .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr.h40 {
+      height: 44px;
+      display: table-row; }
     .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td {
-      width: 16%; }
-      .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td.richcc-td-space0, .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td.richcc-td-space1, .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td.richcc-td-space2, .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td.richcc-td-space3, .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td.richcc-td-space4 {
-        width: 17.68%; }
-      .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td.richcc-td-space5 {
-        width: 7.74%; }
-        .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td.richcc-td-space5 .richcc-month-eventbox {
-          width: 33% !important; }
+      width: 16%;
+      padding: 0; }
       .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td.w48 {
-        width: 4%; }
+        width: 48px; }
+      .richcc-datepicker .richcc-daypicker.uib-monthpicker tbody tr td.header-token {
+        text-align: center;
+        width: 14.27% !important; }
     .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-monthviewer thead {
       height: 36px; }
       .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-monthviewer thead tr {
@@ -229,6 +286,12 @@
       .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-monthviewer tbody tr.richcc-row td.richcc-td {
         height: 18px;
         vertical-align: middle; }
+        .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-monthviewer tbody tr.richcc-row td.richcc-td.showBg {
+          padding: 1px; }
+          .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-monthviewer tbody tr.richcc-row td.richcc-td.showBg .richcc-month-eventbox {
+            width: 100%;
+            color: rgba(0, 0, 0, 0.4);
+            background-color: #f0f0f0; }
         .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-monthviewer tbody tr.richcc-row td.richcc-td .marker {
           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
           font-weight: 400;
@@ -243,7 +306,6 @@
           height: 18px;
           display: block;
           margin: 0 auto;
-          background-color: #f8f8f8;
           opacity: 1;
           -moz-animation-duration: 800ms;
           -o-animation-duration: 800ms;
@@ -408,45 +470,55 @@
   100% {
     opacity: 1; } }
     .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder {
-      height: 30px; }
+      height: 30px;
+      width: 30px;
+      padding: 2px 0; }
       .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer thead,
       .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer thead tr,
       .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer thead tr th {
         height: 0 !important; }
       .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td {
-        height: 30px; }
+        height: 30px;
+        width: 14.27%;
+        box-sizing: border-box; }
         .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox {
-          width: 14.28%;
-          height: 30px;
+          width: 100%;
+          height: 40px;
           padding: 0;
           margin: 0;
           display: inline-block;
           vertical-align: middle; }
+          .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .month-date {
+            height: 100%;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: 400;
+            color: #A0A0A0;
+            font-size: x-small;
+            text-align: center;
+            position: absolute;
+            width: 100%; }
+          .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-yearly-event-popupoverlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 999; }
           .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content {
             width: 100%;
             display: block;
             margin: 0 auto;
             height: 100%;
-            background-color: #f6f6f6;
+            background-color: #f0f0f0;
             border-left: 1px solid #fff;
             border-right: 1px solid #fff;
             -moz-box-sizing: content-box;
             -webkit-box-sizing: content-box;
             box-sizing: content-box; }
-            .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content.showingDates .month-date {
-              position: absolute;
-              height: 100%;
-              font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-              font-weight: 400;
-              color: #A0A0A0;
-              font-size: x-small;
-              text-align: center;
-              top: -1px;
-              right: 3px; }
-            .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content.showingDates .markHolder .mark.top {
-              top: 9px; }
-            .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content.showingDates .markHolder .mark.bottom {
-              top: 18px; }
+            .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content .markHolder .mark.top {
+              top: 13px; }
+            .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content .markHolder .mark.bottom {
+              top: 24px; }
             .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content.notInPresentMonth {
               background: none;
               border: none;
@@ -458,10 +530,6 @@
               .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content .markHolder .mark {
                 background: none;
                 opacity: 1; }
-                .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content .markHolder .mark.top {
-                  top: 3px; }
-                .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content .markHolder .mark.bottom {
-                  top: 13px; }
                 .richcc-datepicker .richcc-daypicker.uib-monthpicker .richcc-month-event-box-holder .richcc-monthviewer tbody tr.richcc-row td.richcc-td .richcc-month-eventbox .richcc-eventbox-content .markHolder .mark .mark-text-initial {
                   font-size: 9px;
                   position: relative;
@@ -536,7 +604,8 @@
       .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions {
         display: block;
         margin: 0 auto;
-        height: 36px; }
+        height: 36px;
+        padding: 0 0 0 5px; }
         .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions.calNavHidden .labelHolder {
           width: 100%; }
         .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions .richcc-icon {
@@ -582,6 +651,9 @@
       transition: all 0.2s linear;
       height: 16.67%;
       text-align: left; }
+      .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td.notrans {
+        animation: none;
+        transition: none; }
       .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td:hover, .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td:active, .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td:focus {
         /*background: rgba(0,115,198, 0.05);*/ }
       .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder {
@@ -600,6 +672,9 @@
           -o-transition: all 300ms linear 300ms, width 300ms linear;
           -webkit-transition: all 300ms linear 300ms, width 300ms linear;
           transition: all 300ms linear 300ms, width 300ms linear; }
+          .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark.notrans {
+            animation: none;
+            transition: none; }
           .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark.webWorkers {
             transition: none;
             will-change: auto;
@@ -647,8 +722,12 @@
             -moz-box-sizing: content-box;
             -webkit-box-sizing: content-box;
             box-sizing: content-box; }
+            .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark .mark-stripe.notrans {
+              animation: none;
+              transition: none;
+              width: 100%; }
             .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark .mark-stripe.highlightBorder {
-              border-color: #000000; }
+              border-color: #909090; }
               .richcc-datepicker .richcc-daypicker tbody tr td.richcc-td .markHolder .mark .mark-stripe.highlightBorder .mark-stripe-color {
                 width: calc(100% - 4px);
                 height: calc(100% - 4px);
