--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -11,6 +11,10 @@
     &.bottom {
         margin-top: 0;
 
+        &.yearly-only {
+            margin-top: 10px;
+        }
+
         & > .arrow::after {
             border-bottom-color: #0073c6;
         }
@@ -18,6 +22,11 @@
 
     &.top {
         margin-top: 0;
+
+        &.yearly-only {
+
+            margin-top: -15px;
+        }
 
         & > .arrow::after {
             border-top-color: #0073c6;
@@ -99,7 +108,7 @@
                     display: inline-block;
 
                     &.highlightBorder {
-                        outline:2px dashed #000000;
+                        outline: 2px dashed #000000;
                     }
 
                     .event-title {
@@ -196,9 +205,85 @@
     padding: 0 15px;
     background: #fff;
     margin: 0;
+    border: none;
+    position: relative;
+
+    &.fixedWidth {
+        width: 1367px;
+        height: 595px;
+        display: block;
+        margin: 0 auto;
+        padding: 5px 0 0 0;
+    }
+
+    .richcc-spinner-holder {
+        position: absolute;
+        padding-top: calc(0.25 * (100% - 140px));
+        padding-left: calc(0.50 * (100% - 150px));
+        width: 100%;
+        z-index: 999;
+    }
+
+    .spinner-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        opacity: 0.75;
+        z-index: 900;
+    }
 
     &[light=true] {
         padding: 0 8px;
+    }
+
+    .spinner {
+        width: 70px;
+        text-align: center;
+    }
+
+    .spinner > div {
+        width: 18px;
+        height: 18px;
+        background-color: #0073c6;
+        border-radius: 100%;
+        display: inline-block;
+        -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+        animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    }
+
+    .spinner .bounce1 {
+        -webkit-animation-delay: -0.32s;
+        animation-delay: -0.32s;
+    }
+
+    .spinner .bounce2 {
+        -webkit-animation-delay: -0.16s;
+        animation-delay: -0.16s;
+    }
+
+    @-webkit-keyframes sk-bouncedelay {
+        0%, 80%, 100% {
+            -webkit-transform: scale(0);
+        }
+
+        40% {
+            -webkit-transform: scale(1.0);
+        }
+    }
+
+    @keyframes sk-bouncedelay {
+        0%, 80%, 100% {
+            -webkit-transform: scale(0);
+            transform: scale(0);
+        }
+
+        40% {
+            -webkit-transform: scale(1.0);
+            transform: scale(1.0);
+        }
     }
 
     .richcc-icon-container {
@@ -290,30 +375,24 @@
     .richcc-daypicker {
         height: 100%;
 
+
         &.uib-monthpicker {
+
+            .richcc-year-top-head {
+                width: 100%;
+            }
+
             thead {
                 tr {
+                    &.h40 {
+                        height: 40px;
+                    }
+
                     th {
                         width: 16%;
 
                         &.w48 {
-                            width: 4%;
-                        }
-
-                        &.richcc-td-space0,
-                        &.richcc-td-space1,
-                        &.richcc-td-space2,
-                        &.richcc-td-space3,
-                        &.richcc-td-space4 {
-                            width: 17.68%;
-                        }
-
-                        &.richcc-td-space5 {
-                            width: 7.74%;
-
-                            .richcc-month-eventbox {
-                                width: 33%;
-                            }
+                            width: 48px;
                         }
                     }
                 }
@@ -321,27 +400,24 @@
 
             tbody {
                 tr {
+
+                    &.h40 {
+                        height: 44px;
+                        display: table-row;
+                    }
+
+
                     td {
                         width: 16%;
-
-                        &.richcc-td-space0,
-                        &.richcc-td-space1,
-                        &.richcc-td-space2,
-                        &.richcc-td-space3,
-                        &.richcc-td-space4 {
-                            width: 17.68%;
-                        }
-
-                        &.richcc-td-space5 {
-                            width: 7.74%;
-
-                            .richcc-month-eventbox {
-                                width: 33% !important;
-                            }
-                        }
+                        padding: 0;
 
                         &.w48 {
-                            width: 4%;
+                            width: 48px;
+                        }
+
+                        &.header-token {
+                            text-align: center;
+                            width: 14.27% !important;
                         }
                     }
                 }
@@ -384,6 +460,16 @@
                                     height: 18px;
                                     vertical-align: middle;
 
+                                    &.showBg {
+                                        padding: 1px;
+
+                                        .richcc-month-eventbox {
+                                            width: 100%;
+                                            color: rgba(0,0,0,0.40);
+                                            background-color: #f0f0f0;
+                                        }
+                                    }
+
                                     .marker {
                                         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                                         font-weight: 400;
@@ -400,7 +486,6 @@
                                         height: 18px;
                                         display: block;
                                         margin: 0 auto;
-                                        background-color: #f8f8f8;
                                         opacity: 1;
                                         -moz-animation-duration: 800ms;
                                         -o-animation-duration: 800ms;
@@ -423,7 +508,6 @@
                                         -webkit-animation-delay: 0;
                                         animation-delay: 0;
                                         transition: none;
-
                                         &[transparent='1'] {
                                             -moz-animation-name: richcc-opacity33-animation;
                                             -o-animation-name: richcc-opacity33-animation;
@@ -450,7 +534,6 @@
                                             opacity: 0;
                                             background-color: #003860;
                                         }
-
                                         @-webkit-keyframes richcc-opacity33-animation {
                                             0% {
                                                 opacity: 0;
@@ -676,6 +759,8 @@
 
             .richcc-month-event-box-holder {
                 height: 30px;
+                width: 30px;
+                padding: 2px 0;
 
                 .richcc-monthviewer {
                     thead,
@@ -688,50 +773,58 @@
                         tr.richcc-row {
                             td.richcc-td {
                                 height: 30px;
+                                width: 14.27%;
+                                box-sizing: border-box;
 
                                 .richcc-month-eventbox {
-                                    width: 14.28%;
-                                    height: 30px;
+                                    width: 100%;
+                                    height: 40px;
                                     padding: 0;
                                     margin: 0;
                                     display: inline-block;
                                     vertical-align: middle;
+
+                                    .month-date {
+                                        height: 100%;
+                                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                                        font-weight: 400;
+                                        color: #A0A0A0;
+                                        font-size: x-small;
+                                        text-align: center;
+                                        position: absolute;
+                                        width: 100%;
+                                    }
+
+                                    .richcc-yearly-event-popupoverlay {
+                                        width: 100%;
+                                        height: 100%;
+                                        position: absolute;
+                                        top: 0;
+                                        left: 0;
+                                        z-index: 999;
+                                    }
 
                                     .richcc-eventbox-content {
                                         width: 100%;
                                         display: block;
                                         margin: 0 auto;
                                         height: 100%;
-                                        background-color: #f6f6f6;
+                                        background-color: #f0f0f0;
                                         border-left: 1px solid #fff;
                                         border-right: 1px solid #fff;
                                         -moz-box-sizing: content-box;
                                         -webkit-box-sizing: content-box;
                                         box-sizing: content-box;
 
-                                        &.showingDates {
-                                            .month-date {
-                                                position: absolute;
-                                                height: 100%;
-                                                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                                                font-weight: 400;
-                                                color: #A0A0A0;
-                                                font-size: x-small;
-                                                text-align: center;
-                                                top: -1px;
-                                                right: 3px;
-                                            }
+                                        .markHolder {
+                                            .mark {
 
-                                            .markHolder {
-                                                .mark {
+                                                &.top {
+                                                    top: 13px;
+                                                }
 
-                                                    &.top {
-                                                        top: 9px;
-                                                    }
-
-                                                    &.bottom {
-                                                        top: 18px;
-                                                    }
+                                                &.bottom {
+                                                    top: 24px;
                                                 }
                                             }
                                         }
@@ -750,14 +843,6 @@
                                             .mark {
                                                 background: none;
                                                 opacity: 1;
-
-                                                &.top {
-                                                    top: 3px;
-                                                }
-
-                                                &.bottom {
-                                                    top: 13px;
-                                                }
 
                                                 .mark-text-initial {
                                                     font-size: 9px;
@@ -883,7 +968,6 @@
                 }
             }
         }
-
         thead {
             tr {
 
@@ -898,6 +982,7 @@
                         display: block;
                         margin: 0 auto;
                         height: 36px;
+                        padding: 0 0 0 5px;
 
                         &.calNavHidden {
                             .labelHolder {
@@ -976,6 +1061,11 @@
                         height: 16.67%;
                         text-align: left;
 
+                        &.notrans {
+                            animation: none;
+                            transition: none;
+                        }
+
                         &:hover, &:active, &:focus {
                             /*background: rgba(0,115,198, 0.05);*/
                         }
@@ -997,6 +1087,12 @@
                                 -o-transition: all 300ms linear 300ms, width 300ms linear;
                                 -webkit-transition: all 300ms linear 300ms, width 300ms linear;
                                 transition: all 300ms linear 300ms, width 300ms linear;
+
+                                &.notrans {
+                                    animation: none;
+                                    transition: none;
+                                }
+
 
                                 &.webWorkers {
                                     transition: none;
@@ -1025,6 +1121,13 @@
                                     height: 17px;
                                     position: absolute;
                                     display: block;
+
+                                    &.notrans {
+                                        animation: none;
+                                        transition: none;
+                                        width: 100%;
+                                    }
+
                                     -moz-animation-name: richcc-width-animation;
                                     -o-animation-name: richcc-width-animation;
                                     -webkit-animation-name: richcc-width-animation;
@@ -1051,7 +1154,7 @@
                                     box-sizing: content-box;
 
                                     &.highlightBorder {
-                                        border-color: #000000;
+                                        border-color: #909090;
 
                                         .mark-stripe-color {
                                             width: calc(100% - 4px);
