--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -105,7 +105,8 @@
         cursor: pointer; }
         .richcc-popup-container .richcc-day-popup .event-container .event-detail.event-holiday {
           margin-top: 15px;
-          min-height: 58px; }
+          min-height: 58px;
+          border-bottom-color: transparent; }
         .richcc-popup-container .richcc-day-popup .event-container .event-detail:active {
           -moz-transform: scale(0.98, 0.98);
           -ms-transform: scale(0.98, 0.98);
