--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -175,6 +175,7 @@
                 &.event-holiday {
                     margin-top: 15px;
                     min-height: 58px;
+                    border-bottom-color: transparent;
                 }
 
                 &:active {
